--- a/parcial-2/src/main/resources/public/index.html
+++ b/parcial-2/src/main/resources/public/index.html
@@ -31,36 +31,47 @@
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#!">Información</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="/auth/logout"  th:unless="${session.usuario}">Log Out</a></li>
+                        <li><a class="dropdown-item" href="/auth/logout" th:if="${session.usuario}" >Log Out</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class= "dropdown-item" href="/auth/login"  th:if="${session.usuario}">Login</a></li>
+                        <li><a class= "dropdown-item" href="/auth/login"  th:unless="${session.usuario}">Login</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>
-        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages" th:if="${session.usuario != null and session.usuario.supervisor}">
-            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-            User Creation
-            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-        </a>
-        <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion" th:if="${session.usuario != null and session.usuario.supervisor}">
-            <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                <!-- Resto del código -->
-                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth" >
-                    Authentication
-                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                </a>
-                <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
-                    <nav class="sb-sidenav-menu-nested nav">
-                        <div >
-                            <a class="nav-link" href="templates/register.html">Register</a>
-                            <a class="nav-link" href="templates/usuariosLista.html">Users</a>
-                        </div>
-                    </nav>
-                </div>
-            </nav>
-        </div>
 
+        <div id="layoutSidenav">
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
+                        <div class="nav">
+                            <div class="sb-sidenav-menu-heading">Home</div>
+                            <a class="nav-link" href="index.html">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Home
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Interface</div>
+
+                            <a th:if="${session.usuario} and (${session.usuario.supervisor})" class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#userCreationContent">
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                User Creation
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                            <div id="userCreationContent" th:if="${session.usuario} and (${session.usuario.supervisor})" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion" >
+                                <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
+                                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth" >
+                                        Authentication
+                                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                    </a>
+                                    <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
+                                        <nav class="sb-sidenav-menu-nested nav">
+                                            <div >
+                                                <a class="nav-link" href="templates/register.html">Register</a>
+                                                <a class="nav-link" href="templates/usuariosLista.html">Users</a>
+                                            </div>
+                                        </nav>
+                                    </div>
+                                </nav>
+                            </div>
 
         <div class="sb-sidenav-menu-heading">Addons</div>
                             <a class="nav-link" href="templates/charts.html">
